--- a/stack.yaml
+++ b/stack.yaml
@@ -40,8 +40,7 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 extra-deps:
-- git: https://github.com/dustin/mqtt-hs.git
-  commit: 9e02744795f5b1983eef12a6a27cbc5fedd93146
+- net-mqtt-0.7.0.0
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
