--- a/net-mqtt-lens.cabal
+++ b/net-mqtt-lens.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 15ecc4ef559f4803df7a1a942b2d3d35fb684addcb86a076e2edf3a113dc55d8
+-- hash: 1eabc983f4d8313cc47210cbb8a8e76f8d2c4c49a0a4f394dd16b95701ed71f3
 
 name:           net-mqtt-lens
 version:        0.1.0.0
@@ -34,7 +34,10 @@ library
       Paths_net_mqtt_lens
   hs-source-dirs:
       src
-  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns
+  default-extensions:
+      OverloadedStrings
+      RecordWildCards
+      NamedFieldPuns
   ghc-options: -Wall
   build-depends:
       base >=4.7 && <5
@@ -49,7 +52,10 @@ test-suite net-mqtt-lens-test
       Paths_net_mqtt_lens
   hs-source-dirs:
       test
-  default-extensions: OverloadedStrings RecordWildCards NamedFieldPuns
+  default-extensions:
+      OverloadedStrings
+      RecordWildCards
+      NamedFieldPuns
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       HUnit
